tests/baselines/reference/typesWithSpecializedCallSignatures(strict=true).errors.txt
typesWithSpecializedCallSignatures.ts(3,14): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
typesWithSpecializedCallSignatures.ts(4,31): error TS2564: Property 'bar' has no initializer and is not definitely assigned in the constructor.
typesWithSpecializedCallSignatures.ts(5,31): error TS2564: Property 'baz' has no initializer and is not definitely assigned in the constructor.
typesWithSpecializedCallSignatures.ts(11,9): error TS7006: Parameter 'x' implicitly has an 'any' type.
typesWithSpecializedCallSignatures.ts(30,5): error TS2454: Variable 'i' is used before being assigned.
typesWithSpecializedCallSignatures.ts(31,5): error TS2454: Variable 'a' is used before being assigned.
typesWithSpecializedCallSignatures.ts(34,5): error TS2454: Variable 'a' is used before being assigned.


==== typesWithSpecializedCallSignatures.ts (7 errors) ====
    // basic uses of specialized signatures without errors
    
    class Base { foo: string }
                 ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    class Derived1 extends Base { bar: string }
                                  ~~~
!!! error TS2564: Property 'bar' has no initializer and is not definitely assigned in the constructor.
    class Derived2 extends Base { baz: string }
                                  ~~~
!!! error TS2564: Property 'baz' has no initializer and is not definitely assigned in the constructor.
    
    class C {
        foo(x: 'hi'): Derived1;
        foo(x: 'bye'): Derived2;
        foo(x: string): Base;
        foo(x) {
            ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
            return x;
        }
    }
    var c = new C();
    
    interface I {
        foo(x: 'hi'): Derived1;
        foo(x: 'bye'): Derived2;
        foo(x: string): Base;
    }
    var i: I;
    
    var a: {
        foo(x: 'hi'): Derived1;
        foo(x: 'bye'): Derived2;
        foo(x: string): Base;
    };
    
    c = i;
        ~
!!! error TS2454: Variable 'i' is used before being assigned.
    c = a;
        ~
!!! error TS2454: Variable 'a' is used before being assigned.
    
    i = c;
    i = a;
        ~
!!! error TS2454: Variable 'a' is used before being assigned.
    
    a = c;
    a = i;
    
    var r1: Derived1 = c.foo('hi');
    var r2: Derived2 = c.foo('bye');
    var r3: Base = c.foo('hm');